--- a/index.html
+++ b/index.html
@@ -10,39 +10,10 @@
 <nav>
     <header>
         <div class="conteudoMenu">
-            <nav id="logo"><img src="img/ar_condicionado.png" alt=""></nav>
+            <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
             <nav id="textoheader"><a id="home" href="#">Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="#">Produtos</a> <a href="#">Contatos</a></nav>
         </div>
     </header>
-    <main>
-        <div id="produto1">
-            <div class="imgsolar">
-                <img src="img/energia_solar.png" alt="">
-            </div>
-            <div id="textosolar">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit <br>
-                    <img src="img/linha.png" alt="">
-                </p>
-            </div>
-        </div>
-        <div id="produto2">
-            <div class="p1">
-                <img src="" alt="">
-                <p>visão</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati p</p>
-            </div>
-            <div class="p2">
-                <img src="" alt="">
-                <p>visão</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati p</p>
-            </div>
-            <div class="p3">
-                <img src="" alt="">
-                <p>visão</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati p</p>
-            </div>
-        </div>
-    </main>
 </nav>
 </body>
 </html>
