--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
         </div>
              <nav>
                     <div id="linkangular">
-                        <div ng-mouseover="funcaoArcondicionado()">
+                        <div ng-click="funcaoArcondicionado()">
                             Ar-condicionado
                         </div>
-                        <div ng-mouseover="funcaoInverter()">
+                        <div ng-click="funcaoInverter()">
                             Ar-condicionado Inverter
                         </div>
-                        <div ng-mouseover="funcaoMultisplit()">
+                        <div ng-click="funcaoMultisplit()">
                             Multi Split
                         </div>
-                        <div ng-mouseover="funcaoEnergiasolar()">
+                        <div ng-click="funcaoEnergiasolar()">
                             Energia solar
                         </div>
                     </div>
@@ -198,7 +198,42 @@
                                 <img src="img/multisplit5.jpg" alt="">
                             </div>
                         </div>
+                        <div class="img5ars" ng-show="energiasolar">
+                            <div>
+                                <img src="img/energiasolar1.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="img/energiasolar2.jpeg" alt="">
+                            </div>
+                            <div>
+                                <img src="img/energiasolar3.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="img/energiasolar4.jpeg" alt="">
+                            </div>
+                            <div>
+                                <img src="img/energiasolar5.jpg" alt="">
+                            </div>
+                        </div>
              </nav>
+             <div class="form">
+                <div id="imgform">
+                    ppdd
+                </div>
+                <div id="formulario">
+                    <div class="contato">
+                        <div id="endereco"> 
+                            <h1>CONTATO</h1>
+                    </div>
+                        <img src="img/linha.svg" alt="">
+                        <div class="endereco"> <h1>ENDEREÇO</h1>
+                            <h1>ENTRE EM CONTATO</h1></div>
+                            <br><br><br>
+                       <h1>ENVIE-NOS UMA MENSAGEM</h1>
+                       
+
+                    </div>
+             </div>
     </main>
 </nav>
 </body>
