falta a parte do facebook

--- a/index.html
+++ b/index.html
@@ -221,32 +221,57 @@
                     <img src="img/logoPequena.png" alt="">
                 </div>
                 <div id="formulario">
-                    <div class="contato">
-                        <div id="endereco"> 
-                            <h1>CONTATO</h1>
-                    </div>
-                        <img src="img/linha.svg" alt="">
-                        <div class="endereco"> <h1>ENDEREÇO</h1>
-                            <h1>ENTRE EM CONTATO</h1></div>
-                            <br><br><br>
-                       <h1>ENVIE-NOS UMA MENSAGEM</h1>
-                       <br><br><br><br><br>
-                       <form action="/pagina-processa-dados-do-form" method="post">
-                        <div class="nome">
-                            <label for="nome">NOME:</label>
-                            <input type="text" id="nome" />
-                            <label for="email">E-MAIL:</label>
-                            <input type="email" id="email" />
+                        <div class="contatolinha">
+                            <h1>Contato</h1>
+                            <img src="img/linha.svg" alt="">
                         </div>
-                        <br><br><br>
-                        <div class="nome">
-                            <label for="msg">Mensagem:</label>
-                            <textarea id="msg"></textarea>
+                            <div class="enderercoentreemcontato">
+                               <div class="endereco"> <h1>ENDEREÇO</h1></div>
+                               <div class="entreemcontato"><h1>ENTRE EM CONTATO</h1></div> 
+                                
+                            </div>
+                            <div class="nosenvieumamensagem">
+                                <div class="Mensagem"> <h1>ENVIE-NOS UMA MENSAGEM</h1></div>
                         </div>
-                    </form>
+                           
 
+                    <div id="nomeemail">
+                    <div class="inputbox">
+                        <label for="name">
+                            nome:
+                            <div class="inputfield">
+                                <input type="text" id="name" name="name">
+                            </div>
+                        </label>
+                      </div>
+                      <div class="inputbox">
+                        <label for="email">
+                            E-mail:
+                            <div class="inputfield">
+                                <input type="email" id="email" name="email">
+                            </div>
+                        </label>
+                      </div>
+                    </div>
+                    <div id="Email">
+                      <div class="inputbox">
+                        <label for="Mensagem">
+                            Mensagem:
+                            <div class="inputfieldi">
+                                <input type="text" id="Mensagem" name="Mensagem">
+                            </div>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="botao">
+                        <button> <h3>Enviar</h3></button>
+                    </div>
+                    <div class="socialmidias">
+                        <div class="facebook"><img src="img/icone_fb.svg" alt=""></div>
+                        <div class="instagram"><img src="img/icone_insta.svg" alt=""></div>
                     </div>
              </div>
+         </div>
     </main>
 </nav>
 </body>
