falta deixar resposivo, e o desafio

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div class="conteudoMenu">
             <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
-                <div>
-                 <a id="textoheader"><a id="home" href="#">Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="#">Produtos</a> <a href="#">Contatos</a>
+                <div class="espaco">
+                 <a id="textoheader"><a id="home" href="#"> Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="#">Produtos</a> <a href="#">Contatos</a>
                  </div></div>             
         </div>
     </header>
@@ -47,9 +47,9 @@
                     </li>
                 </ul>
             </div>
-           <div class="visao"><h1>VISÃO</h1></div> 
-           <div class="visao"><h1>VISÃO</h1></div> 
-           <div class="visao"><h1>VISÃO</h1></div> 
+           <div class="visao"><h1>MANUTENÇÃO</h1></div> 
+           <div class="visao"><h1>CONSULTORIA E AVALIAÇÃO</h1></div> 
+           <div class="visao"><h1>PROJETO E INSTALÇÃO</h1></div> 
            <div class="texto"><h1>TEXTO</h1></div>
            <div class="texto"><h1>TEXTO</h1></div>
            <div class="texto"><h1>TEXTO</h1></div>
@@ -70,7 +70,7 @@
             <div class="imagem_servicos_bloco">
                 <ul>
                     <li>
-                        <a href=""><img src="img/ar2.jpg" alt=""></a>
+                        <a href=""><img src="img/consultoria e avaliação.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -80,7 +80,7 @@
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/ar3.jpg" alt=""></a>
+                        <a href=""><img src="img/pexels-sharath-g-2251247.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -90,17 +90,17 @@
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/ar4.jpg" alt=""></a>
+                        <a href=""><img src="img/pexels-max-vakhtbovych-6283961.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
             <div class="imagem_servicos_bloco">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium ipsam adipisci odit sit quo quos libero sunt illo iusto provident blanditiis, facere, nostrum tempore officiis? Velit commodi sunt tenetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium ipsam adipisci odit sit quo quos libero sunt illo iusto provident blanditiis.</p>
             </div>
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/ar5.jpg" alt=""></a>
+                        <a href=""><img src="img/bedroom-gad767f005_1280.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -110,7 +110,7 @@
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/ar6.jpg" alt=""></a>
+                        <a href=""><img src="img/projeto e instalação.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -121,17 +121,19 @@
         <div class="fundocinza">
                 <div id="sobrenos"><h1>SOBRE NÓS</h1>
                 <img src="img/linha.svg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ab vitae, a officia maiores consequuntur saepe fugit accusamus <br> eaque repellendus molestias! <br> Consequatur non exercitationem soluta corporis eum qui optio nobis sint?</p>
+                    <p>Com uma equipe composta por especialistas a mais de uma década no segmento de climatização de ambientes, a Clima Perfeito vem auxiliando nossos clientes a escolherem o melhor sistema de Ar Condicionado para o seu projeto. <br>
+
+                        Estamos entre as melhores empresas credenciadas da fabricante Dalkin, como uma das principais instaladoras de Sistema Central VRF/VRV e Multisplit.</p>
             </div>
                 <div class="imgfundocinza">
-                    <img src="img/arcondicionado.jpg" alt="">
+                    <img src="img/logoPequena.png" alt="">
                 </div>
         </div>
         <div class="produtos4">
             <div id="produto4">
                     <h1>PRODUTOS</h1>
                     <img src="img/linha.svg" alt=""></div>
-        </div>
+        
              <nav>
                     <div id="linkangular">
                         <div ng-click="funcaoArcondicionado()">
@@ -149,7 +151,7 @@
                     </div>
                         <div class="img5ars" ng-show="arcondicionado">
                             <div>
-                                <img src="img/arcondiconadooo.jpg" alt="">
+                                <a href="arcondicionado.html"><img src="img/arcondiconadooo.jpg" alt=""></a>
                             </div>
                             <div>
                                 <img src="img/arcondicionadoo2.jpg" alt="">
@@ -216,6 +218,7 @@
                             </div>
                         </div>
              </nav>
+            </div>
              <div class="form">
                 <div id="imgform">
                     <img src="img/logoPequena.png" alt="">
@@ -264,9 +267,9 @@
                     <div class="botao">
                         <button> <h3>Enviar</h3></button>
                     </div>
-                    <div class="socialmidias">
-                        <div class="facebook"><img src="img/icone_fb.svg" alt=""></div>
-                        <div class="instagram"><img src="img/icone_insta.svg" alt=""></div>
+                    <div class="icons">
+                       <img src="img/icone_fb.svg" alt="">
+                        <img src="img/icone_insta.svg" alt="">
                     </div>
              </div>
          </div>
