--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 <div class="Mensagem"> <h1>ENVIE-NOS UMA MENSAGEM</h1></div>
                         </div>
                     <div id="nomeemail">
-                    <div class="inputbox">
+                    <div class="inputbox1">
                         <label for="name">
                             nome:
                             <div class="inputfield">
@@ -245,7 +245,7 @@
                             </div>
                         </label>
                       </div>
-                      <div class="inputbox">
+                      <div class="inputbox2">
                         <label for="email">
                             E-mail:
                             <div class="inputfield">
