--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="conteudoMenu">
             <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
                 <div class="espaco">
-                 <a id="textoheader"><a id="home" href="#"> Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="#">Produtos</a> <a href="#">Contatos</a>
+                 <a id="textoheader"><a id="home" href="#"> Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="produto4">Produtos</a> <a href="#">Contatos</a>
                  </div></div>             
         </div>
     </header>
