--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
             <img src="img/linha.svg" alt="">
         </div>
         <div class="area_servicos">
-            <div class="img_linha"><div>
-            </div>
+
+            <div class="img_linha">
                 <ul>
                     <li>
-                        <img class="" src="img/linha1.png" alt="">
+                        <img src="" alt="">
                     </li>
                 </ul>
             </div>
             <div class="imagem_servicos_bloco">
                 <ul>
                     <li>
-                        <a href=""><img src="img/consultoria e avaliação.jpg" alt=""></a>
+                        <img src="img/projeto e instalação.jpg" alt="">
                     </li>
                 </ul>
             </div>
@@ -80,7 +80,7 @@
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/pexels-sharath-g-2251247.jpg" alt=""></a>
+                        <img src="img/projeto e instalação.jpg" alt="">
                     </li>
                 </ul>
             </div>
@@ -90,17 +90,20 @@
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/pexels-max-vakhtbovych-6283961.jpg" alt=""></a>
+                        <img src="img/projeto e instalação.jpg" alt="">
                     </li>
                 </ul>
+            </div>
+            <div class="imagem_servicos_linha">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci facere, unde asperiores, cupiditate libero saepe temporibus .</p>
             </div>
             <div class="imagem_servicos_bloco">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium ipsam adipisci odit sit quo quos libero sunt illo iusto provident blanditiis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium ipsam adipisci odit sit quo quos libero sunt illo iusto provident blanditiis, facere, nostrum tempore officiis? Velit.</p>
             </div>
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/bedroom-gad767f005_1280.jpg" alt=""></a>
+                        <img src="img/projeto e instalação.jpg" alt="">
                     </li>
                 </ul>
             </div>
@@ -110,12 +113,19 @@
             <div class="imagem_servicos_linha">
                 <ul>
                     <li>
-                        <a href=""><img src="img/projeto e instalação.jpg" alt=""></a>
+                        <img src="img/projeto e instalação.jpg" alt="">
                     </li>
                 </ul>
             </div>
             <div class="imagem_servicos_linha">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci facere, unde asperiores, cupiditate libero saepe temporibus .</p>
+            </div>
+            <div class="imagem_servicos_linha">
+                <ul>
+                    <li>
+                        <img src="img/projeto e instalação.jpg" alt="">
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="fundocinza">
@@ -124,6 +134,7 @@
                     <p>Com uma equipe composta por especialistas a mais de uma década no segmento de climatização de ambientes, a Clima Perfeito vem auxiliando nossos clientes a escolherem o melhor sistema de Ar Condicionado para o seu projeto. <br>
 
                         Estamos entre as melhores empresas credenciadas da fabricante Dalkin, como uma das principais instaladoras de Sistema Central VRF/VRV e Multisplit.</p>
+                
             </div>
                 <div class="imgfundocinza">
                     <img src="img/logoPequena.png" alt="">
@@ -136,13 +147,13 @@
         
              <nav>
                     <div id="linkangular">
-                        <div ng-click="funcaoArcondicionado()">
+                        <div ng-mouseover="funcaoArcondicionado()">
                             Ar-condicionado
                         </div>
-                        <div ng-click="funcaoInverter()">
+                        <div ng-mouseover="funcaoInverter()">
                             Ar-condicionado Inverter
                         </div>
-                        <div ng-click="funcaoMultisplit()">
+                        <div ng-mouseover="funcaoMultisplit()">
                             Multi Split
                         </div>
                         <div ng-click="funcaoEnergiasolar()">
