--- a/arcondicionado.html
+++ b/arcondicionado.html
@@ -30,6 +30,17 @@
             <p> <b> Já sabe qual ar condicionado comprar? </b><br>
 
                 Descubra qual é o ideal para deixar seu ambiente geladinho!</p>
+                <id class="estrelaavaliacao">
+                    <div>
+                        <span class="estrela" data-valor="1">&#9733;</span>
+                        <span class="estrela" data-valor="2">&#9733;</span>
+                        <span class="estrela" data-valor="3">&#9733;</span>
+                        <span class="estrela" data-valor="4">&#9733;</span>
+                        <span class="estrela" data-valor="5">&#9733;</span>
+                      </div>                      
+
+                </id>
+
                 <a href="#">Ver Dica</a>
                 <hr><br>
                 <p>Sinta todo o bem-estar e conforto que o Ar-Condicionado Split 12000 BTUs PAC12000TFM12 da Philco pode proporcionar a você! <br> Ele conta com diversas funções para tornar o seu dia a dia mais agradável. <br> Com a função Timer, você pode ...</p><br>
@@ -43,29 +54,17 @@
           <b> no Pix</b></p>
         <p>R$ 1.698,05 em até 8x de R$ 212,25</p>
         <a href="#">Mais Formas de Pagamento</a>
-        <div class="calcular">
-            <div class="textocalcular">
-                <p>calcular frete</p>
-            </div>
-            <div class="botao">
-                <div id="digiteseucep">Digite seu cpf</div>
-                <div id="botaoOK">OK</div>
-            </div>
+        <div class="botao">
+            <p>calcular frete</p>
+        <div class="botaocompra">
+            <div class="calcularfrete"><button type="button" value="Digite seu Cpf">Digite seu Cpf</button></div>
+            <div class="ok"><button type="button" value="OK">OK</button></div>
         </div>
-       <button class="botaoCompra">Comprar</button>
-       <div><p>Este produto é vendido e entregue por FRIOPEÇAS. A Americanas garante a sua compra, do pedido à entrega. saiba mais</p></div>
-       <hr>           
-    </div>
-</div>   
-    <div class="recomendacao">
-        <h3>Quem viu esse produto também viu</h3>
-    </div>
-    <div class="outrosprodutos">
-        <div><h1>111</h1></div>
-        <div><h1>222</h1></div>
-        <div><h1></h1></div>
-        <div></div>
-    </div>
+        </div>
+        <div class="comprar"><button type="button" value="Comprar">Comprar</button></div>
+        <div><p>Este produto é vendido e entregue por FRIOPEÇAS. A <b>G.toy</b>  garante a sua compra, do pedido à entrega. <a href="#">saiba mais</a></p></div>
+
 </body>
+<script src="js/estilo.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
