--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                     </div>
              </div>
          </div>
+         <button id="btn-voltar-topo" onclick="voltarAoTopo()"> &uarr;</button>
     </main>
 </nav>
 </body>
@@ -325,4 +326,5 @@
          });
  
  </script>
+ <script src="js/index.js"></script>
 </html>
