--- a/arcondicionado.html
+++ b/arcondicionado.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/estiloArcondicionado.css">
     <title>Document</title>
 </head>
-<body>
+<body ng-app="meuApp" ng-controller="meuController">
     <header>
         <div class="conteudoMenu">
             <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
@@ -25,13 +25,25 @@
                       </button> 
                       <a href="">compartilhar</a>  
                 </div>                                             
-                <div class="imgproduto"><img src="img/arcondiconadooo.jpg" alt=""></div>
+                <div class="imgproduto" ng-show="arcondicionado"><img src="img/arcondiconadooo.jpg" alt=""></div>
                 <div class="mesmoprodutoimgdiferentes">
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
+                    <div class="img5ars" ng-show="arcondicionado">
+                        <div>
+                            <a href="arcondicionado.html"><img src="img/arcondiconadooo.jpg" alt=""></a>
+                        </div>
+                        <div>
+                            <img src="img/arcondicionadoo2.jpg" alt="">
+                        </div>
+                        <div >
+                            <img src="img/arcondicionadooo3.jpg" alt="">
+                        </div>
+                        <div >
+                            <img src="img/arcondicionadooo4.jpg" alt="">
+                        </div>
+                        <div >
+                            <img src="img/arcondicionadooo5.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -96,14 +108,127 @@
                
             </div>
 
-
+<div class="Carrinho">
         <button class="botao-compra" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
-
+    </div>
         </div>
      </div>
 
-            
-   
+            <div class="semelhantes">
+                <h1> você também pode gostar desses</h1>
+            </div>
+   <div class="produtossemelhantes">
+    <div class="primeiraimg">
+        <img src="img/inverter1.jfif" alt="">
+        <div><p>AR CONDICIONADO TCL INVERTER...</p>
+            <div class="estrelaavaliacaosemelhante">
+                <div>
+                    <span class="estrela" data-valor="1">&#9733;</span>
+                    <span class="estrela" data-valor="2">&#9733;</span>
+                    <span class="estrela" data-valor="3">&#9733;</span>
+                    <span class="estrela" data-valor="4">&#9733;</span>
+                    <span class="estrela" data-valor="5">&#9733;</span>
+                  </div>                      
+                        <p>&nbsp;(51 avaliações)</p>
+                       <div class="reais">
+                        <h5><s>R$ 1.668,00</s></h5> &nbsp;
+                        <div class="doseverde">&darr; 12%</div>
+                        </div> 
+                        <div class="dollar">
+                            <h6>R$ 1.467,84</h6><p><b>no Pix</b></p>
+                        </div>           
+            </div>
+        </div>
+    </div>
+    <div class="segundaimg">
+        <img src="img/inverter2.jfif" alt="">
+        <div><p>AR CONDICIONADO SIMPLY INVERTER...</p>
+            <div class="estrelaavaliacaosemelhante">
+                <div>
+                    <span class="estrela" data-valor="1">&#9733;</span>
+                    <span class="estrela" data-valor="2">&#9733;</span>
+                    <span class="estrela" data-valor="3">&#9733;</span>
+                    <span class="estrela" data-valor="4">&#9733;</span>
+                    <span class="estrela" data-valor="5">&#9733;</span>
+                  </div>                      
+                        <p>&nbsp;(60 avaliações)</p>
+                        <div class="reais">
+                            <h5><s>R$ 1.668,00</s></h5> &nbsp;
+                            <div class="doseverde">&darr; 12%</div>
+                            </div> 
+                            <div class="dollar">
+                                <h6>R$ 1.467,84</h6><p><b>no Pix</b></p>
+                            </div>           
+            </div>
+        </div>
+    </div>
+    <div class="terceiraimg">
+        <img src="img/inverter3.jpg" alt="">
+        <div><p>AR CONDICIONADO PHILLIP INVERTER...</p>
+            <div class="estrelaavaliacaosemelhante">
+                <div>
+                    <span class="estrela" data-valor="1">&#9733;</span>
+                    <span class="estrela" data-valor="2">&#9733;</span>
+                    <span class="estrela" data-valor="3">&#9733;</span>
+                    <span class="estrela" data-valor="4">&#9733;</span>
+                    <span class="estrela" data-valor="5">&#9733;</span>
+                  </div>                      
+                        <p>&nbsp;(150 avaliações)</p>
+                        <div class="reais">
+                            <h5><s>R$ 1.668,00</s></h5> &nbsp;
+                            <div class="doseverde">&darr; 12%</div>
+                            </div> 
+                            <div class="dollar">
+                                <h6>R$ 1.467,84</h6><p><b>no Pix</b></p>
+                            </div>           
+            </div>
+        </div>
+    </div>
+    <div class="quartimg">
+        <img src="img/inverter4.jfif" alt="">
+        <div><p>AR CONDICIONADO COP INVERTER...</p>
+            <div class="estrelaavaliacaosemelhante">
+                <div>
+                    <span class="estrela" data-valor="1">&#9733;</span>
+                    <span class="estrela" data-valor="2">&#9733;</span>
+                    <span class="estrela" data-valor="3">&#9733;</span>
+                    <span class="estrela" data-valor="4">&#9733;</span>
+                    <span class="estrela" data-valor="5">&#9733;</span>
+                  </div>                      
+                        <p>&nbsp;(100 avaliações)</p>
+                        <div class="reais">
+                            <h5><s>R$ 1.668,00</s></h5> &nbsp;
+                            <div class="doseverde">&darr; 12%</div>
+                            </div> 
+                            <div class="dollar">
+                                <h6>R$ 1.467,84</h6><p><b>no Pix</b></p>
+                            </div>           
+            </div>
+        </div>
+    </div>
+    <div class="ultimaimg">
+        <img src="img/inverter5.jfif" alt="">
+        <div><p>AR CONDICIONADO AGRATO INVERTER...</p>
+            <div class="estrelaavaliacaosemelhante">
+                <div>
+                    <span class="estrela" data-valor="1">&#9733;</span>
+                    <span class="estrela" data-valor="2">&#9733;</span>
+                    <span class="estrela" data-valor="3">&#9733;</span>
+                    <span class="estrela" data-valor="4">&#9733;</span>
+                    <span class="estrela" data-valor="5">&#9733;</span>
+                  </div>                      
+                        <p>&nbsp;(200 avaliações)</p>
+                        <div class="reais">
+                            <h5><s>R$ 1.668,00</s></h5> &nbsp;
+                            <div class="doseverde">&darr; 12%</div>
+                            </div> 
+                            <div class="dollar">
+                                <h6>R$ 1.467,84</h6><p><b>no Pix</b></p>
+                            </div>           
+            </div>
+        </div>
+    </div>
+   </div>
 </body>
 <script src="js/estilo.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
