--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div ng-mouseover="funcaoMultisplit()">
                             Multi Split
                         </div>
-                        <div ng-click="funcaoEnergiasolar()">
+                        <div ng-mouseover="funcaoEnergiasolar()">
                             Energia solar
                         </div>
                     </div>
@@ -288,43 +288,5 @@
     </main>
 </nav>
 </body>
-<script>
-    var app = angular.module('meuApp', []);
-         app.controller('meuController', function($scope) {
-             $scope.arcondicionado = true;
-             $scope.inverter = false;
-             $scope.multisplit = false;
-             $scope.energiasolar = false;
-             
-             $scope.funcaoArcondicionado = function() {
-                 $scope.arcondicionado = true;
-                 $scope.inverter = false;
-                 $scope.energiasolar = false;
-                 $scope.multisplit = false;
-             }
- 
-             $scope.funcaoInverter = function() {
-                 $scope.inverter = true;
-                 $scope.arcondicionado = false;
-                 $scope.energiasolar = false;
-                 $scope.multisplit = false;
-             }
- 
-             $scope.funcaoMultisplit = function() {
-                 $scope.multisplit = true;
-                 $scope.arcondicionado = false;
-                 $scope.inverter = false;
-                 $scope.energiasolar = false;
-             }
- 
-             $scope.funcaoEnergiasolar = function() {
-                 $scope.energiasolar = true;
-                 $scope.arcondicionado = false;
-                 $scope.inverter = false;
-                 $scope.multisplit = false;
-             }		
-         });
- 
- </script>
  <script src="js/index.js"></script>
 </html>
