--- a/arcondicionado.html
+++ b/arcondicionado.html
@@ -119,6 +119,7 @@
             </div>
    <div class="produtossemelhantes">
     <div class="primeiraimg">
+        <a href="arcondicionadoinverter.html">
         <img src="img/inverter1.jfif" alt="">
         <div><p>AR CONDICIONADO TCL INVERTER...</p>
             <div class="estrelaavaliacaosemelhante">
@@ -139,8 +140,10 @@
                         </div>           
             </div>
         </div>
+    </a>
     </div>
     <div class="segundaimg">
+        <a href="arcondicionadoinverter.html">
         <img src="img/inverter2.jfif" alt="">
         <div><p>AR CONDICIONADO SIMPLY INVERTER...</p>
             <div class="estrelaavaliacaosemelhante">
@@ -161,8 +164,10 @@
                             </div>           
             </div>
         </div>
+        </a>
     </div>
     <div class="terceiraimg">
+        <a href="arcondicionadoinverter.html">
         <img src="img/inverter3.jpg" alt="">
         <div><p>AR CONDICIONADO PHILLIP INVERTER...</p>
             <div class="estrelaavaliacaosemelhante">
@@ -183,8 +188,10 @@
                             </div>           
             </div>
         </div>
+        </a>
     </div>
     <div class="quartimg">
+        <a href="arcondicionadoinverter.html">
         <img src="img/inverter4.jfif" alt="">
         <div><p>AR CONDICIONADO COP INVERTER...</p>
             <div class="estrelaavaliacaosemelhante">
@@ -205,8 +212,10 @@
                             </div>           
             </div>
         </div>
+        </a>
     </div>
     <div class="ultimaimg">
+        <a href="arcondicionadoinverter.html">
         <img src="img/inverter5.jfif" alt="">
         <div><p>AR CONDICIONADO AGRATO INVERTER...</p>
             <div class="estrelaavaliacaosemelhante">
@@ -227,6 +236,7 @@
                             </div>           
             </div>
         </div>
+        </a>
     </div>
    </div>
 </body>
