--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         </div>
                         <div class="img5ars" ng-show="inverter">
                             <div>
-                                <img src="img/inverter1.jfif" alt="">
+                             <a href="arcondicionadoinverter.html"><img src="img/inverter1.jfif" alt=""></a>
                             </div>
                             <div>
                                 <img src="img/inverter2.jfif" alt="">
@@ -196,7 +196,7 @@
                         </div>
                         <div class="img5ars" ng-show="multisplit">
                             <div>
-                                <img src="img/multisplit1.png" alt="">
+                           <a href="multisplit.html"><img src="img/multisplit1.png" alt=""></a> 
                             </div>
                             <div>
                                 <img src="img/multisplit2.jpg" alt="">
@@ -213,7 +213,7 @@
                         </div>
                         <div class="img5ars" ng-show="energiasolar">
                             <div>
-                                <img src="img/energiasolar1.jpg" alt="">
+                        <a href="energiasolar.html"><img src="img/energiasolar1.jpg" alt=""></a>
                             </div>
                             <div>
                                 <img src="img/energiasolar2.jpeg" alt="">
