--- a/arcondicionadoinverter.html
+++ b/arcondicionadoinverter.html
@@ -25,30 +25,30 @@
                       </button> 
                       <a href="">compartilhar</a>  
                 </div>                                             
-                <div class="imgproduto" ng-show="arcondicionado"><img src="img/arcondiconadooo.jpg" alt=""></div>
+                <div class="imgproduto" ng-show="arcondicionado"><img src="img/inverter1.jfif" alt=""></div>
                 <div class="mesmoprodutoimgdiferentes">
                     <div class="img5ars" ng-show="arcondicionado">
                         <div>
-                            <a href="arcondicionado.html"><img src="img/arcondiconadooo.jpg" alt=""></a>
+                            <a href="arcondicionado.html"><img src="img/inverter1.jfif" alt=""></a>
                         </div>
                         <div>
-                            <img src="img/arcondicionadoo2.jpg" alt="">
+                            <img src="img/inverter2.jfif" alt="">
                         </div>
                         <div >
-                            <img src="img/arcondicionadooo3.jpg" alt="">
+                            <img src="img/inverter3.jpg" alt="">
                         </div>
                         <div >
-                            <img src="img/arcondicionadooo4.jpg" alt="">
+                            <img src="img/inverter4.jfif" alt="">
                         </div>
                         <div >
-                            <img src="img/arcondicionadooo5.png" alt="">
+                            <img src="img/inverter5.jfif" alt="">
                         </div>
                     </div>
                 </div>
             </div>
 
 
-            <div class="nomeproduto"><h1> Ar Condicionado Split Electrolux 9000 <br> BTUs Ecoturbo VI09F/VE09F - 220v</h1> <br>
+            <div class="nomeproduto"><h1> Ar Condicionado Invert TCL 9000 <br> BTUs Ecoturbo VI09F/VE09F - 220v</h1> <br>
 
            
                 <div class="estrelaavaliacao">
@@ -70,7 +70,7 @@
                <div class="link"><a href="">Ver dica</a>
                     <hr>
                 <p>
-                    Sinta todo o bem-estar e conforto que o Ar-Condicionado Split 12000 BTUs <br> PAC12000TFM12 da Philco pode proporcionar a você! <br> Ele conta com diversas funções para tornar o seu dia a dia mais agradável. <br> Com a função Timer, você pode ...
+                    Sinta todo o bem-estar e conforto que o Ar-Condicionado Inverter 12000 BTUs <br> PAC12000TFM12 da Philco pode proporcionar a você! <br> Ele conta com diversas funções para tornar o seu dia a dia mais agradável. <br> Com a função Timer, você pode ...
                 </p>
                 <a href="">Mais informações</a>
                 <br>
@@ -120,8 +120,8 @@
    <div class="produtossemelhantes">
     <div class="primeiraimg">
         <a href="multisplit.html">
-        <img src="img/inverter1.jfif" alt="">
-        <div><p>AR CONDICIONADO TCL INVERTER...</p>
+        <img src="img/multisplit1.png" alt="">
+        <div><p>AR CONDICIONADO TCL MULTISPLIT...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -144,8 +144,8 @@
     </div>
     <div class="segundaimg">
         <a href="multisplit.html">
-        <img src="img/inverter2.jfif" alt="">
-        <div><p>AR CONDICIONADO SIMPLY INVERTER...</p>
+        <img src="img/multisplit2.jpg" alt="">
+        <div><p>AR CONDICIONADO SIMPLY MULTISPLIT...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -168,8 +168,8 @@
     </div>
     <div class="terceiraimg">
         <a href="multisplit.html">
-        <img src="img/inverter3.jpg" alt="">
-        <div><p>AR CONDICIONADO PHILLIP INVERTER...</p>
+        <img src="img/multisplit3.png" alt="">
+        <div><p>AR CONDICIONADO PHILLIP MULTISPLIT...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -192,8 +192,8 @@
     </div>
     <div class="quartimg">
         <a href="multisplit.html">
-        <img src="img/inverter4.jfif" alt="">
-        <div><p>AR CONDICIONADO COP INVERTER...</p>
+        <img src="img/multisplit4.jpg" alt="">
+        <div><p>AR CONDICIONADO COP MULTISPLIT...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -216,8 +216,8 @@
     </div>
     <div class="ultimaimg">
         <a href="multisplit.html">
-        <img src="img/inverter5.jfif" alt="">
-        <div><p>AR CONDICIONADO AGRATO INVERTER...</p>
+        <img src="img/multisplit5.jpg" alt="">
+        <div><p>AR CONDICIONADO AGRATO MULTISPLIT...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
